# tiny-rag-ai

./: .gitignore  README.md  pyproject.toml
example/: example_usage.py
src/tiny_ai/: __init__.py  engine.py  indexer.py
src/tiny_rag_ai/: __init__.py  engine.py  indexer.py
tests/: test_engine.py  test_indexer.py
